@startuml title Hiprint

entity User{ 
    * email (String) <<PK>>
    --
    * username (String)
    * whatsapp_number (String)
    * password (String)
    * address (String)
    * role (Set)
    * token (String)
    * create_at (Datetime)
}

entity Order{
    * id (Number) <<PK>>
    * id_user (Number) <<FK>>
    * id_file (Number) <<FK>>
    --
    * status (Set)
    * price (Number)
    * delivery_price (Number)
    * type_service (Set)
    * time_delivery (Datetime)
    * location (String)
    * give_receipt (Boolean)
    * description (String)
    * create_at (Datetime)
    * update_at (Datetime)
}

entity File{
    * id(Number) <<PK>>
    --
    * status (Set)
    * link (String)
    * total_page (Number)
    * total_BNW (Number)
    * total_NCL (Number)
    * total_FCL (Number)
    * price (Number)
    * size (Set)
    * mode (Set)
    * description (String)
    * create_at (Datetime)
    * update_at (Datetime)
}

User ||--o{ Order
User ||--o{ File
File }|--|| Order

@enduml
